<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="timesofmoney.qnbmerchant.fragments.GenerateQRCodeFragment">


    <timesofmoney.qnbmerchant.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/dynamic_qr_code"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

    <timesofmoney.qnbmerchant.customviews.FloatLabeledEditText
        android:id="@+id/dynamicAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:hintTextColor="@color/tab_bg"

        >

        <EditText
            android:id="@+id/curr"
            android:tag="CURR"
            android:visibility="gone"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="left"
            android:text="EGP "
            android:inputType="number"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edtxtAmount"
            android:layout_toRightOf="@+id/curr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:hint="@string/amount"
            android:inputType="number" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#ffffff" />

    </timesofmoney.qnbmerchant.customviews.FloatLabeledEditText>


    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_corner_blue_bg_button"
        android:textColor="@android:color/white"
        android:ems="10"
        android:text="@string/proceed" />
</LinearLayout>
